# piratesvsninjas-raw

./: Ninjeditor.sln  README  README.txt
branches/: README
branches/new-physics-engine/: configure.in
branches/new-physics-engine-0.1/: AUTHORS  BRANCHINFO  ChangeLog  LICENSE  Makefile.am  README  autogen.sh  config.h.in  configure.in  cross-configure.sh  test-multi.demo  test.demo
branches/new-physics-engine-0.1/data/: back.tga  default.xml  flower3.xcf  kenshin.tga  level1.xml  miroku.tga  obj_sonic.xml  sign-arrow.xcf  signposts.xcf  sonic_animation.xml  wide-bg2-starry.xcf
branches/new-physics-engine-0.1/deprecated_branch/: BUILD  COPYING  cross-configure.sh
branches/new-physics-engine-0.1/docs/: PLAN.fizix
branches/new-physics-engine-0.1/src/: Makefile.am  StdString.h  Vector2D.cpp  Vector2D.h  Vector2d.cpp  Vector2d.h  animation.cpp  animation.h  animations.cpp  animations.h  basename.h  force.cpp  force.h  forceFactory.cpp  forceFactory.h  forceGravity.cpp  forceGravity.h  forceInput.cpp  forceInput.h  gameMode.cpp  gameMode.h  gameOptions.cpp  gameOptions.h  gameState.cpp  gameState.h  globals.h  input.cpp  input.h  inputLiveHandler.h  inputPlayback.cpp  inputPlayback.h  inputRecord.cpp  inputRecord.h  layer.cpp  layer.h  object.cpp  object.h  objectBackground.cpp  objectBackground.h  objectController.cpp  (+26 more)
branches/new-physics-engine-0.1/src/tests/: Makefile  Makefile.am  Makefile.in  test_vector2D.cpp  test_vector2D.h
branches/new-physics-engine-0.1/tests/: Makefile  Makefile.am  Makefile.in  test1.cpp  test1.h
branches/new-physics-engine/data/: kenshin.tga  miroku.tga
branches/new-physics-engine/src/: basename.cpp  force.h  gameState.h  globals.h  inputPlayback.h  objectPlayer.cpp  platform.h  (+3 more)
branches/win32-dev-rv356/: test.demo
editor/trunk/: config.h.in  configure.in
engine/trunk/: .gitignore  Makefile.win  TODO  build-win32-installer.sh  config.h.in  configure.in  cross-configure.sh  make-win32-installer  ninjas-engine-devcpp_private.rc  ninjasengine.kdevses  test.demo
gamedata/: README.txt
keymania/trunk/: Makefile.am  configure.in
keymania/trunk/src/: .gitignore  Makefile.am  gameOptions.cpp  gameState.cpp  gameState.h  keymania.cpp  keymania.h  oggFile.h  stdafx.h  timer.cpp  timer.h  window.h
ninjeditor/src/: Form1.Designer.cs  IMapObject.cs  MapObjectDefinition.cs  MapObjectDefinitionList.cs  Ninjeditor.csproj  frmLevelEditor.cs  frmLevelEditor.resx
src/: Form1.Designer.cs  IMapObject.cs  Map.cs  MapDrawableMap.cs  MapObject.cs  MapObjectDefinition.cs  Maplayer.cs  Ninjeditor.csproj  Program.cs  RGBValue.cs  all.xcf  frmLevelEditor.cs  frmLevelEditor.resx  ghetto-credits.xcf
src/Properties/: AssemblyInfo.cs  Resources.Designer.cs
tags/release-0.1/: cross-configure.sh  test.demo
tags/release-0.2/: .gitignore  config.h.in  ninjasengine.kdevelop.filelist  test-multi.demo
trunk/: .gitignore  BUILD  ChangeLog  Makefile  Makefile.am  Makefile.win  README  TODO  WHERE_WERE_WE  autogen.sh  config.h.in  configure.in  cross-configure.sh  cross-make.sh  gameState.h  installer.nsi  installer.nsi.in  makensis.sh  ninjas-engine-devcpp.dev  ninjas-engine-devcpp.layout  ninjas-engine-devcpp_private.h  ninjas-engine-devcpp_private.rc  ninjas-engine-devcpp_private.res  ninjasengine.kdevelop  ninjasengine.kdevelop.pcs  object.cpp  regen.sh  test-map.xml  test.demo  window.h
trunk/ai/: .gitignore  Makefile.am  aiMain.cpp  aiTrainer.cpp  aiTrainer.h  gene.cpp  gene.h  geneticAlgorithm.cpp  geneticAlgorithm.h  globals.h  inputEvent.h  precompiled.h
trunk/ash/sprites/: jellymap.xcf  jouten_notdom.xcf
trunk/data/: back.xcf  default.xml  sign-arrow.xcf  totem.xcf
trunk/data/objects/: obj_sonic_x.xml
trunk/docs/: PLAN.fizix  fullsource.h.txt  python-example.c  python-example.py
trunk/docs/other_stuff/: GLTexture.h  Model_3DS.cpp  leiame.txt  readme.txt
trunk/docs/sockets/: client.cpp
trunk/experimental_code/: Makefile  client.cpp  client.h  dom-test-udp.cpp  ezSockets.h  main.cpp  network.h  server.cpp  server.h
trunk/gfx_src/: back.xcf
trunk/gfx_src/in_progress/: menu-idea.xcf
trunk/installer-files/: installer.static.1.in  installer.template.nsi.in
trunk/libs/Box2D/Source/Common/: b2Settings.h
trunk/libs/Box2D/Source/Dynamics/: b2World.cpp
trunk/libs/alogg/decoder/libogg/: aclocal.m4
trunk/libs/alogg/decoder/libvorbis/lib/: vorbisfile.c
trunk/libs/alogg/examples/linux/: example
trunk/src/: .gitignore  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.common  Makefile.mac  Makefile.mgw  Ninjas.rc  Ninjas.sln  Ninjas.vcproj  ai.h  allegro_wrapper.h  animation.cpp  animation.h  animationeditor.cpp  animationeditor.h  animations.cpp  animations.h  assetManager.cpp  assetManager.h  auto-config.h  basename.cpp  credits.cpp  credits.h  effectsManager.cpp  effectsManager.h  eventManager.cpp  eventManager.h  ezSockets.h  force.cpp  force.h  forceFactory.cpp  forceFactory.h  forceGravity.cpp  forceGravity.h  forceInput.cpp  forceInput.h  gameBase.cpp  gameBase.h  (+102 more)
trunk/src/build-tools/: generate-swig-bindings.bat
trunk/src/gui/: GUI_globals.cpp  GUI_layeroptions.cpp  GUI_layeroptions.h  mapEditor.wxg  mapEditorGui.xrc
trunk/src/lua/: mapeditorGUI.lua  mapeditorGUI.lua.new-swig
trunk/src/objects/: object.cpp  object.h  object3d.cpp  object3d.h  objectBackground.cpp  objectBackground.h  objectBounce.cpp  objectBounce.h  objectBridge.cpp  objectBridge.h  objectCollectable.cpp  objectCollectable.h  objectController.cpp  objectController.h  objectCutBars.cpp  objectCutBars.h  objectDoor.cpp  objectDoor.h  objectEnemy.cpp  objectEnemy.h  objectFan.cpp  objectFan.h  objectPlayer.cpp  objectPlayer.h  objectPlayerHuman.cpp  objectPlayerHuman.h  objectRadiusBlock.cpp  objectRadiusBlock.h  objectSpring.cpp  objectSpring.h  objectStatic.cpp  objectStatic.h  objectTxtOverlay.cpp  objectTxtOverlay.h
trunk/src/swig/: .gitignore  engine.i  engine_wrap.cpp
trunk/src/tests/: Makefile.am  test_assetManager.h  test_rect.cpp  test_rect.h  test_resourceLoader.cpp  test_vector2D.cpp
trunk/win32/libsrc/: .gitignore  build.sh
(+285 files in other folders)
