dnl CROSS COMPILING - if you are looking in here to mess with cross
dnl compiling stuff, scroll down to where it says XXXX CROSS COMPILING
dnl see BUILD or the Wiki for more info 

dnl LARGE PARTS of this configure.in stolen from Clanlib configure.ac

dnl This is still a MESS.

AC_INIT(src/main.cpp)
AC_PREFIX_DEFAULT(/usr/local/)

VERSION_MAJOR="0"
VERSION_MINOR="2"
VERSION_FIX="3"
VERSION_EXTRA="-pre-alpha"
PACKAGE_NAME="ninjas-engine"

VERSION="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_FIX$VERSION_EXTRA"

# Test for GCC and version
GccVersion=0
PrecompileEnable="yes"

AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# stolen from Xara
AC_MSG_CHECKING([Compiler])
if test $ac_compiler_gnu = "yes"; then
	GccVersion=`$CXX -v 2>&1 | $AWK '{ if ($2 ~ /version/) print $3 }'`
	GccVersion=`echo $GccVersion | $AWK 'BEGIN { FS = "."; } { printf "% d", ($1 * 1000 + $2) * 1000 + $3;}'`

	if test -n "$GccVersion" && test "$GccVersion" -ge 3004000; then
		AC_MSG_RESULT([gcc >= 3.4.0, PreCompiled headers enabled])
		WARN_FLAGS="$WARNFLAGS $WARN_FLAGS34"
		OPT_FLAGS="$OPT_FLAGS $OPT_FLAGS34"
		PrecompileEnable="yes"
	else
		AC_MSG_RESULT([gcc < 3.4.0, PreCompiled headers disabled])
		PrecompileEnable="no"
	fi
else
	AC_MSG_RESULT([non-gcc, PreCompiled headers disabled])
	PrecompileEnable="no"
fi

AC_LANG(C++)

AM_PATH_CPPUNIT(1.9.6)

dnl --------------------------------
dnl ./configure command line options
dnl --------------------------------
AC_ARG_WITH([extra-includes], AC_HELP_STRING([--with-extra-includes=DIR],[Add extra include paths]),
  use_extra_includes="$withval",
  use_extra_includes=NO
)
if test -n "$use_extra_includes" && test "$use_extra_includes" != "NO"; then
  for dir in $use_extra_includes; do
    extra_includes="$extra_includes -I$dir"
  done
fi

AC_ARG_WITH([extra-libs], AC_HELP_STRING([--with-extra-libs=DIR],[Add extra library paths]), 
  use_extra_libs="$withval",
  use_extra_libs=NO
)
if test -n "$use_extra_libs" && test "$use_extra_libs" != "NO"; then
   for dir in $use_extra_libs; do
     extra_libraries="$extra_libraries -L$dir"
   done
fi

CXXFLAGS="$CXXFLAGS $extra_includes"
CFLAGS="$CFLAGS $extra_includes"
LDFLAGS="$LDFLAGS $extra_libraries"

dnl AC_ARG_WITH(ogg,
dnl [  --with-ogg=DIR         Set where the Ogg library is located]) 
dnl AC_ARG_WITH(vorbis,
dnl [   --with-vorbis=DIR      Set where the Vorbis library is located])

dnl --------------------------------
dnl Test for subversion presence
dnl if so, include the revision number
dnl --------------------------------
if test -e ".svn"; then
	AC_PATH_PROG(WHICH_SVN, svn, no)
	if test "$WHICH_SVN" != "no"; then
		SVN_VERSION=`svn info | grep Revision | cut -f2 -d ' '`
		VERSION="$VERSION-svn$SVN_VERSION"
		AC_DEFINE([SUBVERSION_BUILD], [], [Defined if we are building from subversion])
	fi
fi

dnl ----------------------------------------------------------------
dnl Test if we're running on Mac, if we are, we need a tiny bit
dnl of MAC carbon code for the package.  
dnl
dnl NEEDS FIXING - 'uname -s' tests the platform we are RUNNING on,
dnl  NOT the platform we are building for.  Most of the time these are
dnl  the same, but during cross compiles they are not.
dnl
dnl For example, cross compiling from Mac->Linux would currently make
dnl our script think that we are building FOR MacOSX.
dnl ----------------------------------------------------------------
AC_PATH_PROG(WHICH_UNAME, uname, no)
if test "$WHICH_UNAME"; then
	OUR_PLATFORM=`uname -s`
	if test "$OUR_PLATFORM" = "Darwin"; then
		AC_DEFINE([PLATFORM_DARWIN], [], [Defined if building for Darwin])
	fi
fi

dnl PACKAGE_NAME = "ninjas-engine"

AM_INIT_AUTOMAKE(${PACKAGE_NAME}, ${VERSION})

dnl --------------------
dnl Cross compile stuff
dnl --------------------
case $target_alias in
	*mingw*)
		WIN32="yes"
	;;
	*)
		WIN32="no"
	;;
esac

if test "$WIN32" = "yes"; then
	dnl you can try editing these 2 lines if cross compile stuff isn't working
	dnl DON'T FORGET to re-run ./autogen.sh when you are done editing here
	dnl also, double check your cross-configure.sh
	ALLEGRO_LIBS="`allegro-config --libs --static` -lmingw32 -lwsock32"
	ninjas_CFLAGS="-mwindows"
	ninjas_CXXFLAGS="-mwindows"
	aitrainer_CFLAGS="-mwindows"
	aitrainer_CXXFLAGS="-mwindows"
else
	ALLEGRO_LIBS="`allegro-config --libs`"
fi

AM_CONDITIONAL([WIN32], [test $WIN32 = "yes"])

dnl ------------------------------------------------
dnl Check for FreeType2
dnl define FT2_CFLAGS and FT2_LIBS.
dnl ------------------------------------------------

dnl FT2=no

dnl AC_CHECK_FT2([9.5.3], 
dnl				FT2="yes",
dnl				AC_MSG_RESULT(libfreetype2 check Failed: Disabling FreeType2 support)
dnl )


dnl ------------------------------------------------
dnl Check for ogg
dnl sets $OGG_CFLAGS and $OGG_LIBS on success
dnl ------------------------------------------------

OGG=no

XIPH_PATH_OGG(
				OGG="yes",
				AC_MSG_RESULT(libogg check Failed: Disabling OggVorbis support)
)

dnl ------------------------------------------------
dnl Check for vorbis
dnl sets $VORBIS_CFLAGS and $VORBIS_LIBS on success
dnl ------------------------------------------------

VORBIS=no

XIPH_PATH_VORBIS(
				VORBIS="yes" VORBIS_LIBS="$VORBISFILE_LIBS $VORBIS_LIBS",
				AC_MSG_RESULT(libvorbis check Failed: Disabling OggVorbis support)
        VORBIS="no"
)

dnl ---------------------------
dnl Combined ogg/vorbis support
dnl ---------------------------

dnl Both must work to enable it
if test x$VORBIS = xyes && test x$OGG = xyes; then
	ogg_music="enabled"
else
	ogg_music="disabled"
fi

if test x$ogg_music = xenabled; then
   AC_CHECK_HEADERS([vorbis/vorbisfile.h])

	 dnl The ORDER of OGGVORBIS_LIBS matters
	 OGGVORBIS_LIBS="$VORBIS_LIBS $OGG_LIBS"
	 OGGVORBIS_CFLAGS="$OGG_CLFAGS $VORBIS_CLFAGS"
fi 

AM_CONDITIONAL(HAVE_OGG_VORBIS, test x$ogg_music = xenabled)

dnl -------------------------
dnl Check for libpng
dnl -------------------------
AC_CHECK_HEADERS([png.h])
AC_MSG_CHECKING(libpng)
AC_TRY_COMPILE([#include <png.h>], 
[png_structp png_ptr;], 
LIBPNG='-lpng'; echo yes;
AC_DEFINE(HAVE_PNG_H), LIBPNG=''; echo no)

dnl -------------------------
dnl Check for zlib
dnl -------------------------
AC_CHECK_HEADERS([zlib.h])
AC_CHECK_LIB(z, deflate, ZLIB='-lz';AC_DEFINE(HAVE_ZLIB_H),ZLIB='')

dnl --------------------------
dnl Check for various things
dnl --------------------------
AC_CHECK_HEADERS([allegro.h])
AC_CHECK_HEADERS([vector])
AC_CHECK_HEADERS([list])

dnl -----------------
dnl Set it all up
dnl -----------------

AM_CONDITIONAL(PRECOMPILE_ENABLE, [test "$PrecompileEnable" = "yes"])

ninjas_CXXFLAGS="-Wall $ninjas_CXXFLAGS $extra_includes $OGGVORBIS_CFLAGS -Iexternal -Iobjects"

dnl keep this SEPERATE even though here it is identical
PRECOMPILED_CXXFLAGS="$ninjas_CXXFLAGS"

if test x$PrecompileEnable = xyes; then
ninjas_CXXFLAGS="$ninjas_CXXFLAGS -include precompiled.h"
aitrainer_CXXFLAGS="$aitrainer_CXXFLAGS -include precompiled.h"
fi

ninjas_LDFLAGS="$ninjas_LDFLAGS $extra_libraries"
ninjas_LDFLAGS="$ninjas_LDFLAGS $extra_libraries"

LDFLAGS="$extra_libraries $LDFLAGS"
LIBS="$LIBS $ALLEGRO_LIBS $OGGVORBIS_LIBS $LIBPNG $ZLIB"

AC_SUBST(PACKAGE_NAME)
AC_SUBST(ninjas_CXXFLAGS)
AC_SUBST(ninjas_LDFLAGS)
AC_SUBST(aitrainer_CXXFLAGS)
AC_SUBST(aitrainer_LDFLAGS)
AC_SUBST(PRECOMPILED_CXXFLAGS)

AC_SUBST(extra_libraries)

dnl DOES NOT WORK RIGHT NOW
DATA_DIR="${prefix}/data"
AC_DEFINE_UNQUOTED([DATA_DIR], "${DATA_DIR}", [The installer prefix e.g. /usr/local])

if test x$PrecompileEnable = xyes; then
	AC_DEFINE([PRECOMPILE_ENABLE], "1", [Whether we are precompiling or not])
fi

AC_SUBST(OGGVORBIS_CFLAGS)
AC_SUBST(OGGVORBIS_LIBS)
dnl AC_SUBST(OGG_DEFS)

AM_CONFIG_HEADER(config.h)

AC_OBJEXT
AC_EXEEXT

AC_OUTPUT(Makefile src/Makefile src/Doxyfile src/tests/Makefile ai/Makefile installer-files/installer.template.nsi)
